crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_14.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: MOT
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: en
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: en
    - Word:
        category: ~
        body:
          - Text: la
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: la
    - Word:
        category: ~
        body:
          - Text: tierra
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: tierra
    - Event:
        - Event: points
  terminator:
    Question: "?"
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u0015164754_165474\u0015"
      start_time: "164754"
      end_time: "165474"
