crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_4.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: PAR
tier_body:
  linkers:
    - LinkerLazyOverlap: +<
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: mhm
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: mhm
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00158180_8669\u0015"
      start_time: "8180"
      end_time: "8669"
