crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_rich_8.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: CHI
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: Asaf
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: Asaf
    - Word:
        category: ~
        body:
          - Text: stakēl
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations:
          - Replacement: tistakēl
        raw_text: stakēl
    - Word:
        category: ~
        body:
          - Text: ʕal
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: ʕal
    - Word:
        category: ~
        body:
          - Text: "ha#"
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "ha#"
    - Word:
        category: ~
        body:
          - Text: tris
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: tris
  terminator:
    Period: "."
  postcodes: []
  media_bullet: ~
