crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__mor_0.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
items:
  - main:
      pos: det
      lemma: een
      features:
        - Ind
    post_clitics: []
  - main:
      pos: noun
      lemma: ballerina
      features: []
    post_clitics: []
  - main:
      pos: verb
      lemma: hebben
      features:
        - Fin
        - Pres
        - S
    post_clitics: []
  - main:
      pos: det
      lemma: een
      features:
        - Ind
    post_clitics: []
  - main:
      pos: noun
      lemma: gieter
      features:
        - Acc
    post_clitics: []
  - main:
      pos: adj
      lemma: vast
      features:
        - S1
    post_clitics: []
terminator:
  Period: "."
