crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__mor_1.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
items:
  - main:
      pos: intj
      lemma: goedzo
      features: []
    post_clitics: []
terminator:
  Period: "."
