crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__mor_2.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: tier
---
items:
  - main:
      pos: det
      lemma: de
      features:
        - Def
    post_clitics: []
  - main:
      pos: noun
      lemma: gieter
      features:
        - Acc
    post_clitics: []
  - main:
      pos: verb
      lemma: houden
      features:
        - Fin
        - Pres
        - S
    post_clitics: []
  - main:
      pos: pron
      lemma: ze
      features:
        - Prs
        - S3
    post_clitics: []
  - main:
      pos: adp
      lemma: onder
      features: []
    post_clitics: []
  - main:
      pos: det
      lemma: de
      features:
        - Def
    post_clitics: []
  - main:
      pos: noun
      lemma: kraan
      features: []
    post_clitics: []
terminator:
  Period: "."
